force-app/main/default/objects/Opportunity/fields/RFI_Due__c.field-meta.xml
<CustomField>
    <fullName>RFI_Due__c</fullName>
    <description>Day and Time RFI is due</description>
    <inlineHelpText>Enter date and time for RFI Due.</inlineHelpText>
    <label>RFI Due</label>
    <type>DateTime</type>
</CustomField>