force-app/main/default/objects/Opportunity/fields/RFI_Release__c.field-meta.xml
<CustomField>
    <fullName>RFI_Release__c</fullName>
    <inlineHelpText>Enter date and time for RFI Release.</inlineHelpText>
    <label>RFI Release</label>
    <type>DateTime</type>
</CustomField>