force-app/main/default/objects/Opportunity/fields/RFI_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RFI_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not B3 submitted an RFI / Market Research Response</description>
    <inlineHelpText>Mark if RFI was submitted.</inlineHelpText>
    <label>RFI Submitted</label>
    <type>Checkbox</type>
</CustomField>