force-app/main/default/objects/Opportunity/fields/RFP_Due__c.field-meta.xml
<CustomField>
    <fullName>RFP_Due__c</fullName>
    <description>Day Proposal is due</description>
    <inlineHelpText>Enter date for when proposal is due.</inlineHelpText>
    <label>RFP/Proposal Due Date</label>
    <type>Date</type>
</CustomField>