force-app/main/default/objects/Opportunity/fields/RFP_Release__c.field-meta.xml
<CustomField>
    <fullName>RFP_Release__c</fullName>
    <inlineHelpText>Enter date and time for when the RFP is released.</inlineHelpText>
    <label>RFP Release</label>
    <type>DateTime</type>
</CustomField>