force-app/main/default/objects/Opportunity/fields/Sales_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Sales_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter supporting Sales Analyst.</inlineHelpText>
    <label>Sales Analyst</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Sales Analyst)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>