force-app/main/default/objects/Opportunity/fields/Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select opportunity Capture Lead.</inlineHelpText>
    <label>Capture Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>