force-app/main/default/objects/Opportunity/fields/Solicitation_Number__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Number__c</fullName>
    <inlineHelpText>Enter number or ID that identifies an opportunity.</inlineHelpText>
    <label>Solicitation Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>