force-app/main/default/objects/Opportunity/fields/Solution_Lead__c.field-meta.xml
<CustomField>
    <fullName>Solution_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter opportunity Solution Lead.</inlineHelpText>
    <label>Solution Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Solution Lead)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>