force-app/main/default/objects/Opportunity/fields/Strategic_Value__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Value__c</fullName>
    <inlineHelpText>Select degree of strategic value to Sales Team</inlineHelpText>
    <label>Strategic Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(0) Little / No Strategic Value</fullName>
                <default>true</default>
                <label>(0) Little / No Strategic Value</label>
            </value>
            <value>
                <fullName>(1) Some Strategic Value</fullName>
            </value>
            <value>
                <fullName>(2) Strategic Value with New Customer or Capability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>