force-app/main/default/objects/Opportunity/fields/Sub_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sub_Organization__c</fullName>
    <inlineHelpText>State which organization is driving the requirement. Ex. VBA, VHA, NCA, OIT</inlineHelpText>
    <label>Sub-Organization</label>
    <length>250</length>
    <type>Text</type>
</CustomField>