force-app/main/default/objects/Opportunity/fields/Total_Bidders__c.field-meta.xml
<CustomField>
    <fullName>Total_Bidders__c</fullName>
    <inlineHelpText>Enter total number of bidders during contract proposal</inlineHelpText>
    <label>Total Bidders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>