force-app/main/default/objects/Opportunity/fields/Total_FTEs__c.field-meta.xml
<CustomField>
    <fullName>Total_FTEs__c</fullName>
    <inlineHelpText>Enter number of all FTEs in contract.</inlineHelpText>
    <label>Total FTEs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>