force-app/main/default/objects/Opportunity/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <inlineHelpText>Select the contract vehicle type.</inlineHelpText>
    <label>Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T4NG</fullName>
            </value>
            <value>
                <fullName>IT70</fullName>
                <label>GSA IT-70</label>
            </value>
            <value>
                <fullName>GSA PSS</fullName>
            </value>
            <value>
                <fullName>VECTOR</fullName>
            </value>
            <value>
                <fullName>Open Market</fullName>
            </value>
            <value>
                <fullName>CIO-SP3</fullName>
            </value>
            <value>
                <fullName>DTC</fullName>
            </value>
            <value>
                <fullName>Eagle Shield</fullName>
            </value>
            <value>
                <fullName>SeaPort-e</fullName>
            </value>
            <value>
                <fullName>VETS2</fullName>
            </value>
            <value>
                <fullName>ITES-3</fullName>
            </value>
            <value>
                <fullName>beta_SAM</fullName>
                <label>beta.SAM</label>
            </value>
            <value>
                <fullName>ADVISOR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>FBO</fullName>
                <isActive>false</isActive>
                <label>FBO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>