force-app/main/default/objects/Opportunity/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <inlineHelpText>Enter work location of contract.</inlineHelpText>
    <label>Work Location</label>
    <length>64</length>
    <type>Text</type>
</CustomField>