force-app/main/default/objects/Opportunity/validationRules/Other_Loss_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Loss_Reason_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(Loss_Reason__c, &apos;Other&apos;),
ISBLANK(Other_Loss_Reason__c)
),
AND(
NOT(ISPICKVAL(Loss_Reason__c, &apos;Other&apos;)),
NOT(ISBLANK(Other_Loss_Reason__c))
)
)</errorConditionFormula>
    <errorDisplayField>Other_Loss_Reason__c</errorDisplayField>
    <errorMessage>Leave blank unless Loss Reason is Other</errorMessage>
</ValidationRule>