force-app/main/default/objects/Opportunity/validationRules/Other_Organization_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Organization_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(Organization__c, &apos;Other&apos;),
ISBLANK(Other_Organization__c)
),
AND(
NOT(ISPICKVAL(Organization__c, &apos;Other&apos;)),
NOT(ISBLANK(Other_Organization__c))
)
)</errorConditionFormula>
    <errorDisplayField>Other_Organization__c</errorDisplayField>
    <errorMessage>Leave blank unless Organization is Other.</errorMessage>
</ValidationRule>