force-app/main/default/objects/Opportunity/validationRules/Stage_Closed_Not_Bid_Reason_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Closed_Not_Bid_Reason_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(StageName, &apos;Closed Not Bid&apos;),
ISBLANK(Closed_Not_Bid_Reason__c)
),
AND(
NOT(ISPICKVAL(StageName, &apos;Closed Not Bid&apos;)),
NOT(ISBLANK(Closed_Not_Bid_Reason__c))
)
)</errorConditionFormula>
    <errorDisplayField>Closed_Not_Bid_Reason__c</errorDisplayField>
    <errorMessage>Leave blank unless Stage is Closed Not Bid</errorMessage>
</ValidationRule>