force-app/main/default/objects/Opportunity/listViews/AllActive.listView-meta.xml
<ListView>
    <fullName>AllActive</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Account_Executive__c</columns>
    <columns>Sales_Lead__c</columns>
    <columns>Solution_Lead__c</columns>
    <columns>Proposal_Manager__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Competitive_Procedure__c</columns>
    <columns>Prime_Sub__c</columns>
    <columns>Our_Contract_Value__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>PoP_Months__c</columns>
    <columns>RFP_Release__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.FISCAL_PERIOD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Lead__c</field>
        <operation>notEqual</operation>
        <value>angela norman</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>All Active</label>
</ListView>