force-app/main/default/objects/Opportunity/listViews/MLS_Pipeline.listView-meta.xml
<ListView>
    <fullName>MLS_Pipeline</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Vehicle__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>RFI_Due__c</columns>
    <columns>RFP_Release__c</columns>
    <columns>RFP_Due__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Sales_Lead__c</columns>
    <columns>Solution_Lead__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>MLS</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Identification,Qualification,Pursuit,Bid,In Evaluation</value>
    </filters>
    <label>MLS Pipeline</label>
</ListView>