force-app/main/default/objects/Opportunity/listViews/Pipeline.listView-meta.xml
<ListView>
    <fullName>Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>RFP_Release__c</columns>
    <columns>RFP_Due__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Our_Contract_Value__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>PoP_Months__c</columns>
    <columns>COE__c</columns>
    <columns>Solution_Lead__c</columns>
    <columns>Sales_Lead__c</columns>
    <columns>Partner__c</columns>
    <columns>Additional_Partners__c</columns>
    <columns>Sales_Analyst__c</columns>
    <columns>Additional_Support__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Identification,Qualification,Pursuit,Bid,In Evaluation</value>
    </filters>
    <label>Pipeline</label>
</ListView>