force-app/main/default/objects/Opportunity/listViews/Pipeline_Financial_Management.listView-meta.xml
<ListView>
    <fullName>Pipeline_Financial_Management</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Account_Executive__c</columns>
    <columns>Sales_Lead__c</columns>
    <columns>Solution_Lead__c</columns>
    <columns>Proposal_Manager__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Competitive_Procedure__c</columns>
    <columns>Prime_Sub__c</columns>
    <columns>Our_Contract_Value__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>PoP_Months__c</columns>
    <columns>RFP_Release__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.FISCAL_PERIOD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Lead__c</field>
        <operation>notEqual</operation>
        <value>angela norman</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Identification,Qualification,Pursuit,Bid,In Evaluation</value>
    </filters>
    <label>Pipeline - Financial Management</label>
    <sharedTo>
        <group>Sales</group>
    </sharedTo>
</ListView>