force-app/main/default/objects/Opportunity/listViews/Software_Development_Pipeline.listView-meta.xml
<ListView>
    <fullName>Software_Development_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>COE__c</columns>
    <columns>Solution_Lead__c</columns>
    <columns>Sales_Lead__c</columns>
    <columns>Partner__c</columns>
    <columns>Additional_Partners__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bid__c</field>
        <operation>equals</operation>
        <value>TBD,Bid</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Identification,Qualification,Pursuit,Bid,In Evaluation</value>
    </filters>
    <filters>
        <field>COE__c</field>
        <operation>equals</operation>
        <value>Software Engineering</value>
    </filters>
    <label>Software Engineering COE Pipeline</label>
</ListView>