force-app/main/default/objects/Opportunity/listViews/T4NG.listView-meta.xml
<ListView>
    <fullName>T4NG</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>T4NG</value>
    </filters>
    <label>T4NG</label>
</ListView>