force-app/main/default/objects/Opportunity/listViews/T4NGActive.listView-meta.xml
<ListView>
    <fullName>T4NGActive</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Sales_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>T4NG</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>In Evaluation,Closed Won,Closed Lost,Closed Not Bid,Closed Cancelled</value>
    </filters>
    <label>T4NG Active</label>
</ListView>