force-app/main/default/objects/Opportunity/listViews/X1_08_2020.listView-meta.xml
<ListView>
    <fullName>X1_08_2020</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>RFP_Release__c</columns>
    <columns>RFP_Due__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Sales_Lead__c</columns>
    <columns>Solution_Lead__c</columns>
    <columns>COE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Identification,Qualification,Pursuit,Bid,In Evaluation</value>
    </filters>
    <label>1/08/2020</label>
</ListView>